--- a/ventas_arco/views/informe_viaje.xml
+++ b/ventas_arco/views/informe_viaje.xml
@@ -67,7 +67,7 @@
                                             <td><p><span t-field="line.sale_line_id.order_id.invoice_ids.paymentTerm"/></p></td>
                                             <td><p><span t-field="line.sale_line_id.order_id.partner_invoice_id"/></p></td>
                                             <td><p><span t-field="line.sale_line_id.order_id.partner_shipping_id.name"/></p></td>
-                                            <td><p><span t-field="o.ruta"/></p></td>
+                                            <td><p><span t-field="line.sale_line_id.order_id.tag_ids.name"/></p></td>
                                             <td><p><span t-field="line.product_uom_qty"/></p></td>
                                             <td><p>$<span t-field="line.sOrganizacion"/></p></td>
                                             <td><p>$<span t-field="line.valorDeclarado"/></p></td>
