--- a/ventas_arco/views/stock_picking.xml
+++ b/ventas_arco/views/stock_picking.xml
@@ -37,7 +37,7 @@
       </xpath>
 
       <xpath expr="//button[@name='button_validate']" position="attributes">
-          <attribute name="groups">base.group_system</attribute>
+          <attribute name="groups">__export__.res_groups_73_3898080f</attribute>
       </xpath>
        
 
