[FIX] Correcciones arco 02

--- a/ventas_arco/views/informe_viaje.xml
+++ b/ventas_arco/views/informe_viaje.xml
@@ -49,7 +49,7 @@
                                         <th>Destinatario</th>
                                         <th>Destino</th>
                                         <th>N° de bultos</th>
-                                        <th>Servicio organizacion</th>
+                                        <th>S. organizacion</th>
                                         <th>Valor Declarado</th>
                                         <th>Seguro</th>
                                         <th>Maniobras</th>
