--- a/ventas_arco/views/project_task.xml
+++ b/ventas_arco/views/project_task.xml
@@ -46,11 +46,8 @@
         <button name="action_create_cotizacion" attrs="{'invisible': ['|',('project_task_function', '!=', 'envio_c'),('sale_order_id', '!=', False)]}" string="Crear pedido" type="object" class="oe_highlight"/>
       </xpath>
 
-      <xpath expr="//field[@name='partner_id']" position="attributes">
-        <attribute name="string">Recoleccion</attribute>
-      </xpath>
       <xpath expr="//field[@name='partner_id']" position="after">
-        <field name="cliente" />
+        <field name="recoleccion" />
       </xpath>
       
 
