--- a/ventas_arco/views/stock_picking.xml
+++ b/ventas_arco/views/stock_picking.xml
@@ -30,6 +30,9 @@
         <field name="tipodeoperacion2" invisible="1"/>
         <field name="receivedBy" domain="[('category_id','ilike','EMPLEADO')]" attrs="{'invisible': [('tipodeoperacion2', '!=', 'incoming')]}"/>
       </xpath>
+      <xpath expr="//field[@name='origin']" position="after">
+        <field name="destinatario"/>
+      </xpath>
 
       <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='operations']/field[@name='move_ids_without_package']/tree[1]/field[@name='product_uom']" position="after">
         <field optional="show" name="peso"/>
