[FIX] Correcciones en project_task 03

--- a/ventas_arco/views/project_task.xml
+++ b/ventas_arco/views/project_task.xml
@@ -47,7 +47,7 @@
       </xpath>
 
       <xpath expr="//field[@name='partner_id']" position="after">
-        <field name="recoleccion" />
+        <field name="recoleccion2" />
       </xpath>
       
 
