--- a/ventas_arco/views/report_delivery_document.xml
+++ b/ventas_arco/views/report_delivery_document.xml
@@ -5,7 +5,7 @@
             <div name="div_outgoing_address_update">
                 <div t-if="o.move_ids_without_package and o.move_ids_without_package[0].partner_id">
                     <span><strong>Delivery Address:</strong></span>
-                    <div t-field="o.move_ids_without_package[0].partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
+                    <div t-field="o.destinatario" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
                 </div>
                 <div t-if="o.picking_type_id.code != 'internal' and (not o.move_ids_without_package or not o.move_ids_without_package[0].partner_id) and o.picking_type_id.warehouse_id.partner_id">
                     <span><strong>Warehouse Address:</strong></span>
