[FIX] Se agrego un metodo para añadir tareas a una orden de venta 02

--- a/ventas_arco/views/sale_order_cotizacion.xml
+++ b/ventas_arco/views/sale_order_cotizacion.xml
@@ -15,7 +15,7 @@
                             attrs="{'invisible': [('cotizacion_id', '=', False)]}" data-hotkey="q"
                             name="add_to_report_button" type="object" class="btn-primary"/>
                         <button string="Crear nueva orden de venta"
-                            attrs="{'invisible': [('picking_id', '!=', False)]}"
+                            attrs="{'invisible': [('cotizacion_id', '!=', False)]}"
                             name="create_report_button" type="object" class="btn-primary"/>
                         <button string="Cancel" class="btn-secondary" special="cancel"/>
                     </footer>
