--- a/ventas_arco/views/stock_picking.xml
+++ b/ventas_arco/views/stock_picking.xml
@@ -36,6 +36,7 @@
 
       <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='operations']/field[@name='move_ids_without_package']/tree[1]/field[@name='product_uom']" position="after">
         <field optional="show" name="peso"/>
+        <field name="descripcion2"/>
         
       </xpath>
 
