--- a/ventas_arco/views/stock_picking.xml
+++ b/ventas_arco/views/stock_picking.xml
@@ -36,8 +36,12 @@
 
       <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='operations']/field[@name='move_ids_without_package']/tree[1]/field[@name='product_uom']" position="after">
         <field optional="show" name="peso"/>
-        <field name="descripcion2"/>
+        <field name="descripcion2" invisible="1"/>
         
+      </xpath>
+
+      <xpath expr="//button[@name='button_validate']" position="attributes">
+          <attribute name="groups">__export__.res_groups_69_c7024b85</attribute>
       </xpath>
 
       
