[FIX] Correcciones en strings de campos de puerta y casa

--- a/ventas_arco/views/res_partner.xml
+++ b/ventas_arco/views/res_partner.xml
@@ -26,6 +26,14 @@
         <field name="permisionario_id" domain="[('category_id','ilike','PERMISIONARIO')]"/>
       </xpath>
 
+      <xpath expr="//field[@name='street_number']" position="attributes">
+        <attribute name="string">Exterior</attribute>
+      </xpath>
+
+      <xpath expr="//field[@name='street_number2']" position="attributes">
+        <attribute name="string">Interior</attribute>
+      </xpath>
+
     </field>
   </record>
 </odoo>
