[FIX] Correcciones en factura, se agrego el campo ruta a la factura

--- a/ventas_arco/views/report_invoice.xml
+++ b/ventas_arco/views/report_invoice.xml
@@ -20,5 +20,10 @@
                 </ul>
             </div>
         </xpath>
+        <xpath expr="//div[@name='invoice_date']" position="after">
+            <div name="ruta">
+                <p><span t-field="o.ruta" /></p>
+            </div>
+        </xpath>
     </template>
 </odoo>
