--- a/ventas_arco/views/account_move.xml
+++ b/ventas_arco/views/account_move.xml
@@ -17,6 +17,7 @@
 
         <xpath expr="//field[@name='payment_reference']" position="after">
             <field name="paymentTerm"/>
+            <field name="ruta" invisible="0"/>
         </xpath>
 
     </field>
