[FIX] Correcciones en factura, se agrego el campo ruta a la factura 03

--- a/ventas_arco/views/report_invoice.xml
+++ b/ventas_arco/views/report_invoice.xml
@@ -22,7 +22,7 @@
         </xpath>
         <xpath expr="//div[@name='invoice_date']" position="after">
             <div name="ruta">
-                <p><span t-field="o.ruta" /></p>
+                <p><span t-field="o.stock_move_id.picking_id.ruta" /></p>
             </div>
         </xpath>
     </template>
