[FIX] Correcciones en factura, se agrego el campo ruta a la factura 06

--- a/ventas_arco/views/report_invoice.xml
+++ b/ventas_arco/views/report_invoice.xml
@@ -22,6 +22,7 @@
         </xpath>
         <xpath expr="//div[@name='invoice_date']" position="after">
             <div name="ruta">
+                <p>Condiciones de pago: </p>
                 <p><span t-field="o.paymentTerm" /></p>
             </div>
         </xpath>
