[FIX] Correcciones en factura, se agrego el campo ruta a la factura 09

--- a/ventas_arco/views/report_invoice.xml
+++ b/ventas_arco/views/report_invoice.xml
@@ -21,8 +21,9 @@
             </div>
         </xpath>
         <xpath expr="//div[@name='invoice_date']" position="after">
-            <div name="ruta">
-                <p><span t-field="o.paymentTerm" /></p>
+            <div class="col-auto col-3 mw-100 mb-2" t-if="o.paymentTerm" name="payment_term">
+                <strong>Condiciones de pago:</strong>
+                <p class="m-0" t-field="o.paymentTerm"/>
             </div>
         </xpath>
     </template>
