--- a/ventas_arco/views/res_partner.xml
+++ b/ventas_arco/views/res_partner.xml
@@ -37,11 +37,11 @@
     <field name="inherit_id" ref="base_address_extended.view_partner_structured_form"/>
     <field name="arch" type="xml">
 
-      <xpath expr="//field[@name='street_number']" position="attributes">
+      <xpath expr="//label[@for='street_number']" position="attributes">
         <attribute name="string">Exterior</attribute>
       </xpath>
 
-      <xpath expr="//field[@name='street_number2']" position="attributes">
+      <xpath expr="//label[@for='street_number2']" position="attributes">
         <attribute name="string">Interior</attribute>
       </xpath>
 
